Add better handling of filter form field options
I think this was some old logic, for some reason it avoided splitting
the tuple up? I was testing out using Django model enums for the filter
here, which raised a bug with this older version of splitting the tuple.

--- a/readthedocsext/theme/templates/includes/filters/form.html
+++ b/readthedocsext/theme/templates/includes/filters/form.html
@@ -26,8 +26,8 @@
           <i class="fa-solid fa-caret-down icon"></i>
 
           <div class="menu">
-            {% for option in field.field.widget.choices %}
-              <a class="item" data-value="{{ option.0 }}">{{ option.1 }}</a>
+            {% for value, label in field.field.widget.choices %}
+              <a class="item" data-value="{{ value }}">{{ label }}</a>
             {% endfor %}
           </div>
         </div>
