Fix project env vars template issue
Mostly because the env var detail page went away. Upgrades to the table
list display for some improvements and adds UI elements that for
private/public variables, including hashing out private vars.

* Fixes #38
* Fixes #134

--- a/readthedocsext/theme/templates/includes/crud/table_list.html
+++ b/readthedocsext/theme/templates/includes/crud/table_list.html
@@ -312,10 +312,10 @@
 
                 <td class="right aligned collapsing">
                   {% block list_item_right_menu %}
-                    <div class="ui mini buttons">
+                    <div class="ui mini icon buttons">
                       {% block list_item_right_buttons %}
                         {% comment %}
-                          <a class="ui icon button">
+                          <a class="ui button">
                             <i class="fa-solid fa-refresh icon"></i>
                           </a>
                         {% endcomment %}
