--- a/readthedocsext/theme/templates/projects/partials/project_list.html
+++ b/readthedocsext/theme/templates/projects/partials/project_list.html
@@ -106,8 +106,8 @@
   </div>
 {% endblock list_item_header %}
 
-{% block list_item_meta_items %}
-{% endblock list_item_meta_items %}
+{% block list_item_meta %}
+{% endblock list_item_meta %}
 
 {% block list_item_extra_items %}
   {% if object.has_good_build %}
