--- a/readthedocsext/theme/templates/projects/redirect_form.html
+++ b/readthedocsext/theme/templates/projects/redirect_form.html
@@ -12,9 +12,9 @@
 {% block project_edit_content %}
   <form class="ui form" method="post" action="." data-bind="using: ProjectRedirectView()">
     {% csrf_token %}
-    {% alter_field form.redirect_type data_bind="value: redirect_type" %}
-    {% alter_field form.from_url data_bind="textInput: from_url, enable: is_from_url_visible" %}
-    {% alter_field form.to_url data_bind="textInput: to_url, enable: is_to_url_visible" %}
+    {% alter_field form.redirect_type data_bind="valueInit: redirect_type" %}
+    {% alter_field form.from_url data_bind="valueInit: from_url, textInput: from_url, enable: is_from_url_visible" %}
+    {% alter_field form.to_url data_bind="valueInit: to_url, textInput: to_url, enable: is_to_url_visible" %}
     {{ form|crispy }}
 
     <div class="ui disabled segment" data-bind="css: {disabled: is_example_disabled}">
