--- a/readthedocsext/theme/templates/projects/translation_list.html
+++ b/readthedocsext/theme/templates/projects/translation_list.html
@@ -11,7 +11,7 @@
 {% block project_edit_content %}
   {% if project.main_language_project %}
     <div class="ui icon message">
-      <i class="fa-solid fa-exclamation icon"></i>
+      <i class="fa-duotone fa-diagram-nested icon"></i>
       <div class="content">
         <div class="header">
           {% trans "Nested translations are not supported" %}
