--- a/readthedocsext/theme/templates/projects/partials/edit/domain_list.html
+++ b/readthedocsext/theme/templates/projects/partials/edit/domain_list.html
@@ -41,7 +41,7 @@
   <a class="ui icon button"
      href="{% url 'projects_domains_edit' project.slug object.pk %}"
      data-content="{% trans "Edit" %}">
-    <i class="fa-duotone fa-wrench icon"></i>
+    <i class="fa-solid fa-wrench icon"></i>
   </a>
   <a class="ui icon button"
      href="{% url 'projects_domains_delete' project.slug object.pk %}"
