--- a/readthedocsext/theme/templates/projects/partials/edit/notification_email_list.html
+++ b/readthedocsext/theme/templates/projects/partials/edit/notification_email_list.html
@@ -1,4 +1,4 @@
-{% extends "includes/crud/list.html" %}
+{% extends "includes/crud/table_list.html" %}
 
 {% load i18n %}
 
@@ -44,10 +44,12 @@
   {% include "includes/crud/remove_button.html" with id=object.pk form_url=form_url action_text=action_text context_text=context_text field_name="email" field_value=object.email %}
 {% endblock list_item_right_buttons %}
 
+{% block list_item_icon %}
+  <i class="fa-duotone fa-envelope icon"></i>
+{% endblock list_item_icon %}
+
 {% block list_item_header %}
-  <div class="ui basic label">
-    <code>{{ object.email }}</code>
-  </div>
+  {{ object.email }}
 {% endblock list_item_header %}
 
 {% block list_item_meta %}
