--- a/readthedocsext/theme/templates/projects/partials/edit/integration_list.html
+++ b/readthedocsext/theme/templates/projects/partials/edit/integration_list.html
@@ -1,8 +1,6 @@
-{% extends "includes/crud/list.html" %}
+{% extends "includes/crud/table_list.html" %}
 
 {% load i18n %}
-
-{% load gravatar %}
 
 {% load core_tags %}
 {% load privacy_tags %}
@@ -51,8 +49,12 @@
   {% include "includes/crud/remove_button.html" with id=object.pk form_url=form_url action_text=action_text context_text=context_text %}
 {% endblock list_item_right_buttons %}
 
+{% block list_item_icon %}
+  <i class="fa-duotone fa-exchange icon"></i>
+{% endblock list_item_icon %}
+
 {% block list_item_header %}
-  <a class="ui basic label" href="{% url 'projects_integrations_detail' project_slug=project.slug integration_pk=object.pk %}">
+  <a href="{% url 'projects_integrations_detail' project_slug=project.slug integration_pk=object.pk %}">
     {{ object.get_integration_type_display }}
   </a>
   {% if object.has_sync and object.can_sync %}
@@ -62,7 +64,6 @@
 
 {% block list_item_meta %}
   <div class="item">
-    <i class="fa-duotone fa-exchange icon"></i>
     {{ object.exchanges.count }} exchanges
   </div>
 {% endblock list_item_meta %}
