--- a/readthedocsext/theme/templates/projects/integration_exchange_detail.html
+++ b/readthedocsext/theme/templates/projects/integration_exchange_detail.html
@@ -2,7 +2,17 @@
 
 {% load i18n %}
 
-{% block project_edit_content_subheader %}{% trans "Exchange" %}{% endblock %}
+{% block project_edit_content_subheader %}
+  <div class="ui breadcrumb">
+    <a href="{% url 'projects_integrations_detail' project_slug=project.slug integration_pk=httpexchange.related_object.pk %}" class="section">
+      {{ httpexchange.related_object.get_integration_type_display }}
+    </a>
+    <span class="divider">/</span>
+    <div class="active section">
+      {% trans "Exchange" %}
+    </div>
+  </div>
+{% endblock %}
 
 {% block project_edit_content %}
   <h3 class="ui small header">{% trans "Response" %}</h3>
